--- a/braxton.html
+++ b/braxton.html
@@ -35,7 +35,7 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="index.html"><b>Home</b></a>
+	          <a class="navbar-brand" href="i"><b>Home</b></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav">
@@ -73,7 +73,7 @@
 	  		<div class="col-md-6 col-md-offset-3">
 	  			<p class="text-justify" style="color:#00447c">Vice presidential candidate Anthony Braxton is a junior marketing student from South Charleston, West Virginia. Since arriving to WVU, Anthony has been involved in several organizations including SGA, where he has served as a governor, an intern and an executive – and the Mountaineer Maniacs, where he serves as an assistant director. While in SGA, Braxton worked on several initiatives from the charging stations  found across campus, to the Visitation policy in the residence halls, where he has worked as a resident assistant for three years.</p>
 
-	  			<p>Follow <a href="www.twitter.com/BraxtonDoWork">@BraxtonDoWork </a>on Twitter. </p>
+	  			<p>Follow <a href="http://www.twitter.com/BraxtonDoWork">@BraxtonDoWork </a>on Twitter. </p>
 	  		</div>
 	  	</div>
 	  </div>
