--- a/braxton.html
+++ b/braxton.html
@@ -35,7 +35,7 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="index.html"><b>Home</b></a>
+	          <a class="navbar-brand" href=""><b>Home</b></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav">
