--- a/movement.html
+++ b/movement.html
@@ -35,7 +35,7 @@ Join the Movement<!DOCTYPE html>
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="index.html"><b>Home</b></a>
+	          <a class="navbar-brand" href=""><b>Home</b></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav">
