updates for new link for form submission
I removed the iframe from the movement.html page by just adding HTML and
CSS to the Qualtrics form. I updated the links to the form to point
directly to Qualtrics

--- a/braxton.html
+++ b/braxton.html
@@ -35,13 +35,13 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href=""><b>Home</b></a>
+	          <a class="navbar-brand" href="http://www.scottbraxton2015.me"><b>Home</b></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav">
 	            <li><a href="scott.html">Scott</a></li>
 	            <li class="active"><a href="braxton.html">Braxton</a></li>
-	            <li><a href="movement.html">Learn More</a></li>
+	            <li><a href="http://wvu.qualtrics.com/SE/?SID=SV_9S6JJLVbzYQC6m9">Learn More</a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
