--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="row">
               <div class="col-md-10 col-md-offset-1 centered">
                 <p>Mountaineers, are you ready to experience the best West Virginia University? 
-Stephen Scott and Anthony Braxton have announced their candidacy for Student Government Association president and vice president, and are ready to transform SGA and WVU to give you the best college experience. We want your help making WVU the best it can be. Take a look around our site, read our bios and <a href="movement.html">let us know</a> if you want to get involved. Campaigning begins in March, so be sure to keep checking back for more updates.</p>
+Stephen Scott and Anthony Braxton have announced their candidacy for Student Government Association president and vice president, and are ready to transform SGA and WVU to give you the best college experience. We want your help making WVU the best it can be. Take a look around our site, read our bios and <a href="http://wvu.qualtrics.com/SE/?SID=SV_9S6JJLVbzYQC6m9">let us know</a> if you want to get involved. Campaigning begins in March, so be sure to keep checking back for more updates.</p>
                 </div>
               </div>
             </div>
@@ -81,7 +81,7 @@ Stephen Scott and Anthony Braxton have announced their candidacy for Student Gov
                   <a href="braxton.html"> <button type="button" class="btn btn-primary btn-lg btn-block"><h2>Braxton</h2></button> </a>
               </div>
               <div class="col-sm-3 text-center">
-                  <a href="movement.html"> <button type="button" class="btn btn-primary btn-lg btn-block"><h4>Learn More</h4></button> </a>
+                  <a href="http://wvu.qualtrics.com/SE/?SID=SV_9S6JJLVbzYQC6m9"> <button type="button" class="btn btn-primary btn-lg btn-block"><h4>Learn More</h4></button> </a>
               </div>
           </div>
         </div>
