Changed working of canditate

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <div class="row">
               <div class="col-md-10 col-md-offset-1 centered">
                 <p>Mountaineers, are you ready to experience the best West Virginia University? 
-Stephen Scott and Anthony Braxton have announced their candidacy for Student Government Association president and vice president, and are ready to transform SGA and WVU to give you the best college experience. We want your help making WVU the best it can be. Take a look around our site, read our bios and <a href="http://wvu.qualtrics.com/SE/?SID=SV_9S6JJLVbzYQC6m9">let us know</a> if you want to get involved. Campaigning begins in March, so be sure to keep checking back for more updates.</p>
+Stephen Scott and Anthony Braxton have announced their intention to run for Student Government Association president and vice president, and are ready to transform SGA and WVU to give you the best college experience. We want your help making WVU the best it can be. Take a look around our site, read our bios and <a href="http://wvu.qualtrics.com/SE/?SID=SV_9S6JJLVbzYQC6m9">let us know</a> if you want to get involved. Campaigning begins in March, so be sure to keep checking back for more updates.</p>
                 </div>
               </div>
-            </div>
+       
             <!-- START TIMER -->
             <div id="timer" data-animated="FadeIn">
                 <p id="message"></p>
@@ -69,7 +69,7 @@ Stephen Scott and Anthony Braxton have announced their candidacy for Student Gov
             <!-- END TIMER -->
 
 
-        <div class="container">
+       
           <div class="row">
               <div class="col-sm-3 text-center">
                   <a href="#"> <button type="button" class="btn btn-primary btn-lg btn-group-justified"><h2>Home</h2></button> </a>
