--- a/index.html
+++ b/index.html
@@ -101,9 +101,12 @@ Stephen Scott and Anthony Braxton have announced their intentions to run for Stu
           <li data-transition="slideleft" data-slotamount="1" data-thumb="assets/img/slider/4.jpg">
             <img src="assets/img/slider/4.jpg">
           </li>
-	  <!--               <li data-transition="slideleft" data-slotamount="1" data-thumb="assets/img/slider/5.jpg">
+            <li data-transition="slideleft" data-slotamount="1" data-thumb="assets/img/slider/5.jpg">
 			     <img src="assets/img/slider/5.jpg">
-          </li> -->
+          </li>
+           <li data-transition="slideleft" data-slotamount="1" data-thumb="assets/img/slider/5.jpg">
+           <img src="assets/img/slider/6.jpg">
+          </li>
         </ul> 
       </div>
       <!-- END SLIDER -->
