--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ Stephen Scott and Anthony Braxton have announced their intentions to run for Stu
          </br>
 
           <div class="row">
-              <div class="col-sm-3 text-center">
+<!--               <div class="col-sm-3 text-center">
                   <a href="#"> <button type="button" class="btn btn-primary btn-lg btn-group-justified"><h2>Home</h2></button> </a>
-              </div>
+              </div> -->
               <div class="col-sm-3 text-center">
                   <a href="scott.html"> <button type="button" class="btn btn-primary btn-lg btn-block"><h2>Scott</h2></button> </a>
               </div>
@@ -71,8 +71,16 @@ Stephen Scott and Anthony Braxton have announced their intentions to run for Stu
               <div class="col-sm-3 text-center">
                   <a href="http://wvu.qualtrics.com/SE/?SID=SV_9S6JJLVbzYQC6m9"> <button type="button" class="btn btn-primary btn-lg btn-block"><h2>Learn More</h2></button> </a>
               </div>
+              <div class="col-sm-3 text-center">
+                 <button type="button" class="btn btn-primary btn-lg btn-block"><h2><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="BC4N6KHZRQAWC">
+Donate</h2>
+</form></button>
+              </div>
           </div>
         </br>
+        
                       <!-- START TIMER -->
             <div id="timer" data-animated="FadeIn">
                 <h4 id="message"></h4>
