corrected donate link

--- a/index.html
+++ b/index.html
@@ -72,11 +72,7 @@ Stephen Scott and Anthony Braxton have announced their intentions to run for Stu
                   <a href="http://wvu.qualtrics.com/SE/?SID=SV_9S6JJLVbzYQC6m9"> <button type="button" class="btn btn-primary btn-lg btn-block"><h2>Learn More</h2></button> </a>
               </div>
               <div class="col-sm-3 text-center">
-                 <button type="button" class="btn btn-primary btn-lg btn-block"><h2><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="BC4N6KHZRQAWC">
-Donate</h2>
-</form></button>
+               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BC4N6KHZRQAWC"> <button type="button" class="btn btn-primary btn-lg btn-group-justified"><h2>Donate</h2></button> </a>
               </div>
           </div>
         </br>
